kubernetes/apps/observability/opencost/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencost
spec:
  hostnames:
    - opencost.00o.sh
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: opencost
          port: 9090
