kubernetes/apps/observability/opencost/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: opencost-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: opencost
  oidc:
    provider:
      issuer: "https://auth.00o.sh/oauth2/openid/opencost"
    clientID: "opencost"
    clientSecret:
      name: opencost-oidc-secret
    redirectURL: "https://opencost.00o.sh/oauth2/callback"
    logoutPath: "/oauth2/sign_out"
